Bug fix: A bomb could have been "lifted again" if it already was lifted.
Bug fix: A level could contain too many items (in walls/initial skills of the bomber). That means the sum of maximum items must not exceed 50. (Initial skill items * 5 + Items in Walls <= 50)
Bug fix: Sometimes too many walls were created causing a game crash.


----------------------------


Version 1.3.1

Released on July 27, 2008

New feature: Level files are also read from the %APPDATA%\Bombermaaan\Levels directory (#1847811) when exe is called with --use-appdata-dir.
Changed: Bombermaaan can be called from any directory now - no more DLL not found message (revision 464).
Changed: Log file and configuration file are placed in %APPDATA%\Bombermaaan directory (#1847811, revision 462, revision 463) when exe is called with --use-appdata-dir.


----------------------------


Version 1.3

Released on May 7, 2008

New feature: Almost unlimited number of levels. You can now add any number of levels. Plus, you don't have to call it L1 or L6 or whatever. Any filename like a.txt or coolbomberlevel.txt will be ok.
New feature: Enhanced level file format. You can specify the amount of items waiting in walls (tracker item #1847047) and the initial bomber skills for every match (tracker item #1847048).
New feature: Animated coin for the winner of a match.
New feature: Larger window/larger sprites available.
New feature: Invisibility as contamination (tracker item #1864528).
New feature: Flameproof as contamination (tracker item #1847833, revision 241).
New feature: Bombs start moving on special blocks (#1908105).
New feature: Mexican wave of the crowd in the victory screen (but the crowd may also be lazy...)
Changed: Accept space bar, numpad enter and return key to go to next screen (only return key worked so far)
Bug fix: Music started in pause when losing focus (tracker item #1856135).
Bug fix: Victory sound didn't end after Escape (#1851347).
Bug fix: F12 ended program (#1848194).